// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> handle unique ids in nested accordion 1`] = `
<div>
  <div
    class="fr-accordions-group"
    data-fr-group="false"
  >
    <section
      class="fr-accordion"
    >
      <h2
        class="fr-accordion__title"
      >
        <button
          aria-controls="niveau-1-collapse"
          aria-expanded="false"
          class="fr-accordion__btn"
          id="niveau-1__toggle-btn"
          type="button"
        >
          Niveau 1
        </button>
      </h2>
      <div
        class="fr-collapse"
        id="niveau-1-collapse"
      >
        <div
          class="fr-accordions-group"
          data-fr-group="false"
        >
          <section
            class="fr-accordion"
          >
            <h3
              class="fr-accordion__title"
            >
              <button
                aria-controls="4uid3-collapse"
                aria-expanded="false"
                class="fr-accordion__btn"
                id="4uid3__toggle-btn"
                type="button"
              >
                Niveau 2
              </button>
            </h3>
            <div
              class="fr-collapse"
              id="4uid3-collapse"
            >
              <p>
                Sous accordéon
              </p>
            </div>
          </section>
          <section
            class="fr-accordion"
          >
            <h3
              class="fr-accordion__title"
            >
              <button
                aria-controls="4uid4-collapse"
                aria-expanded="false"
                class="fr-accordion__btn"
                id="4uid4__toggle-btn"
                type="button"
              >
                Niveau 2
              </button>
            </h3>
            <div
              class="fr-collapse"
              id="4uid4-collapse"
            >
              <p>
                Sous accordéon
              </p>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`<Accordion /> should have different levels of headings & render both BlocCas & Chapitre 1`] = `
<div>
  <p>
    Avant l'accordéon
  </p>
  <div
    class="fr-accordions-group"
    data-fr-group="false"
  >
    <section
      class="fr-accordion"
    >
      <h2
        class="fr-accordion__title"
      >
        <button
          aria-controls="qui-peut-etre-indemnise-collapse"
          aria-expanded="false"
          class="fr-accordion__btn"
          id="qui-peut-etre-indemnise__toggle-btn"
          type="button"
        >
          Qui peut être indemnisé ?
        </button>
      </h2>
      <div
        class="fr-collapse"
        id="qui-peut-etre-indemnise-collapse"
      >
        <p>
          Vous pouvez être indemnisé par le Fiva si vous êtes dans l'une des 3 situations suivantes :
        </p>
      </div>
    </section>
    <section
      class="fr-accordion"
    >
      <h2
        class="fr-accordion__title"
      >
        <button
          aria-controls="comment-faire-la-demande-collapse"
          aria-expanded="false"
          class="fr-accordion__btn"
          id="comment-faire-la-demande__toggle-btn"
          type="button"
        >
          Comment faire la demande ?
        </button>
      </h2>
      <div
        class="fr-collapse"
        id="comment-faire-la-demande-collapse"
      >
        <p>
          Il y a une procédure pour la victime directe et une autre pour l'ayant-droit de victime.
        </p>
        <h3>
          Vous êtes une victime directe
        </h3>
        <p>
          La démarche varie suivant que votre maladie a été reconnue comme maladie professionnelle ou non.
        </p>
        <h3>
          Vous êtes un ayant-droit de victime
        </h3>
        <p>
          La procédure varie suivant que la maladie de votre proche a été reconnue comme maladie professionnelle ou non.
        </p>
      </div>
    </section>
  </div>
  <p>
    Après l'accordéon
  </p>
</div>
`;

exports[`<Accordion /> should not display accordion after heading level 2 1`] = `
<div>
  <h4>
    Qui peut être indemnisé ?
  </h4>
  <p>
    Vous pouvez être indemnisé par le Fiva si vous êtes dans l'une des 3 situations suivantes :
  </p>
  <h4>
    Comment faire la demande ?
  </h4>
  <p>
    Il y a une procédure pour la victime directe et une autre pour l'ayant-droit de victime.
  </p>
  <h5>
    Vous êtes une victime directe
  </h5>
  <p>
    La démarche varie suivant que votre maladie a été reconnue comme maladie professionnelle ou non.
  </p>
  <h5>
    Vous êtes un ayant-droit de victime
  </h5>
  <p>
    La procédure varie suivant que la maladie de votre proche a été reconnue comme maladie professionnelle ou non.
  </p>
</div>
`;
